<!--
  ~ Copyright (c) 2017 Peter Mao
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyTransparent"
    android:orientation="vertical"
    tools:context="com.gouder.cnsoftbei.View.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:foreground="?selectableItemBackground"

                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/avatar_image"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:textSize="18sp"
                    tools:text="菲儿" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:textSize="14sp"
                    tools:text="微信号：dada20150625" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/see_more"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/tv_name"
                    android:contentDescription="@string/gender_icon"
                    android:src="@drawable/ic_face_black_24dp"
                    android:tint="@android:color/holo_red_dark" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_history_black_24dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/history"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
